--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "captchas-io",
-    "version": "1.0.11",
+    "version": "1.0.0",
     "description": "A wrapper for the CAPTCHAs.IO API",
     "main": "index.js",
     "scripts": {
@@ -14,5 +14,8 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/captchasio/captchas-io.js.git"
+    },
+    "publishConfig": { 
+        "registry": "https://npm.pkg.github.com/" 
     }
 }
